--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #f2f2f1;
+}
+
 body {
   color: #006747;
+  margin: 0;
+  font-size: 1.2em;
 }
 
 ul {
@@ -13,4 +23,278 @@ a {
 
 #player-post {
   color: black;
+}
+
+/* header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #d9d9d6;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+} */
+
+header {
+  width: 100%;
+  border-bottom: 2px solid #d9d9d6;
+  margin-bottom: 15px;
+  
+}
+
+#header-border {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+}
+
+#banner-div {
+  text-align: center;
+}
+
+#banner {
+  width: 100%;
+}
+
+main {
+  max-width: 85%;
+  margin: 0 auto;
+  background-color: #f2f2f1;
+}
+
+/* #root div {
+  background-color: #f2f2f1;
+} */
+
+#post-heading, #sort {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 0;
+}
+
+#sort p {
+  margin-right: 10px;
+}
+
+/* #content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 10px;
+} */
+
+.posts {
+  width: 100%;
+}
+
+.golfer-thumbnail {
+  width: 100%;
+}
+
+/* #content div {
+  margin: 15px 0;
+  width: 100%;
+} */
+
+.posts:not(#root-div) {
+  background-color: white;
+}
+
+#posts-underline {
+  display: block;
+  border: 1px solid #006747;
+  width: 30%;
+  margin-bottom: 10px;
+}
+
+.post-caption:not(#root-div) {
+  text-align: center;
+  background-color: white;
+}
+
+.post-caption p {
+  color: #6B6F73;
+  padding: 5px;
+}
+
+.post-caption h3 {
+  padding-bottom: 10px;
+}
+
+#player-page {
+  width: 90%;
+  margin: 0 auto;
+}
+
+figure img{
+  width: 100%;
+  height: 25%;
+}
+
+table {
+  width: 100%;
+  margin: 10px 0;
+}
+
+td, th {
+    border: 1px solid black;
+    padding: 8px;
+}
+
+.player-bio {
+  max-width: 85%;
+  margin: 0 auto;
+}
+
+.player-bio img{
+  width: 100%;
+}
+
+.player-list-bio {
+  max-width: 85%;
+  margin: 20px auto;
+  background-color: white;
+  padding: 12px;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.player-list-bio p{
+  margin: 10px 0;
+  background-color: white;
+  display: -webkit-box;
+  max-width: 100%;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.player-list-bio img {
+  width: 100%;
+}
+
+.player-list-bio-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#home {
+  margin-left: 10px;
+  background-color: white;
+  border-radius: 3px;
+}
+
+#home:hover {
+  cursor: pointer;
+}
+
+.event-posts {
+  background-color: white;
+  padding: 30px;
+  margin: 50px auto;
+  width: 75%;
+  border-radius: 5px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.event-posts a div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.event-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.event-content p {
+  margin: 0 5px;
+}
+
+.event-content img {
+  height: 270px;
+  width: 200px;
+}
+
+.event-rsvp {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.event-category {
+  text-align: center;
+}
+
+@media screen and (min-width: 800px) {
+  .player-list-bio {
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .player-list-bio div{
+    margin: 0 10px;
+  }
+
+  .player-list-bio img {
+    width: 300px;
+    height: 200px;
+  }
+
+  .player-list-bio p{
+    margin: 0;
+    -webkit-line-clamp: 3;
+  }
+
+  .player-list-bio-header a{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .player-list-bio-header a h2{
+    margin-right: 50px;
+  }
+
+}
+
+
+@media screen and (min-width: 1100px) {
+  #content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 10px;
+  }
+
+  .posts {
+    width: 32%;
+    margin: 10px 5px;
+  }
+
+  .golfer-thumbnail {
+    width: 100%;
+    height: 173px;
+  }
+
+  main {
+    max-width: 70%;
+  }
+
+  #player-page {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
 }
